<resources>
    <string name="app_name">Tip Time</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate_tip">CALCULATE</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (15%)</string>
    <string name="okay_service">Okay (10%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="service_cost">Service cost</string>
    <string name="tip_amount">Tip Amount: %s</string>

</resources>